--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,25 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.ReactLight{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  gap: 3px;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.TrafficLight {
+  display: flex;
+  flex-direction: column;
+  gap: 1px;
+  background-color: rgb(5, 5, 5);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.TrafficLight-light {
+  height: 65px;
+  width: 65px;
+  background-color: rgb(61, 59, 59);
+  border-radius: 50%;
+  display: inline-block;
 }
