--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,15 @@
   flex-direction: column;
   gap: 1px;
   background-color: rgb(5, 5, 5);
+  border-radius: 12px;
 }
 
 .TrafficLight-light {
-  height: 65px;
-  width: 65px;
+  height: 85px;
+  width: 85px;
   border-radius: 50%;
   display: inline-block;
+  margin: 5.3px;
 }
 
 .TrafficLight-light-off {
